# DocuFind

./: .gitignore  CHANGELOG.md  DocuFindLocal.spec  LICENSE  README.md  RELEASE_CHECKLIST.md  build_exe.py  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  dev_cli.py  main.py  settings.py
app/editor/: backup_cleanup_service.py  backup_service.py  file_conflict_detector.py  safe_save_service.py  text_file_loader.py
app/i18n/: en.json  i18n_service.py  ru.json
app/indexer/: chunker.py  deleted_file_detector.py  deleted_payload_cleanup.py  document_state_service.py  file_change_detector.py  file_filter.py  file_signature_service.py  folder_scanner.py  index_reconciler.py  index_service.py  term_collector.py  text_extractor.py
app/models/: content_match.py  document.py  file_match.py  index_progress.py  query_term_group.py  search_query.py  search_result.py
app/russian/: lemma_index_builder.py  lemma_query_expander.py  lemmatizer.py  morphology_analyzer.py  russian_tokenizer.py
app/search/: content_search.py  filename_search.py  freshness_guard.py  fts_query_builder.py  (+8 more)
tests/: __init__.py  test_stage10_query_parser_fts.py  test_stage11_search_core.py  test_stage12_fuzzy_search.py  test_stage13_workers.py  test_stage14_ui.py  test_stage15_editor.py  test_stage16_quality_gates.py  test_stage17_build.py  test_stage2_app_paths_i18n.py  test_stage3_database.py  test_stage4_scanner_filter.py  test_stage5_text_extraction.py  test_stage6_russian_morphology.py  test_stage7_chunker.py  test_stage8_index_service.py  test_stage9_deleted_lifecycle.py
(+38 files in other folders)
